# rdm

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PARITY.md  README.md  SMOKE_TEST.md
.github/workflows/: ci.yml  release.yml
apps/rdm-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
apps/rdm-desktop/scripts/: fetch-ffmpeg.ps1
apps/rdm-desktop/src/: App.svelte  app.css  main.js
apps/rdm-desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/rdm-desktop/src-tauri/binaries/: .gitignore
apps/rdm-desktop/src-tauri/capabilities/: default.json
apps/rdm-desktop/src-tauri/src/: bridge.rs  lib.rs  main.rs
apps/rdm-desktop/src/components/: AddDialog.svelte  AppIcon.svelte  BrowserIntegrationSettings.svelte  MediaResolverPage.svelte  SettingsDialog.svelte  SniffedMediaDialog.svelte  SnifferPage.svelte
apps/rdm-desktop/src/lib/: api.js  format.js  forms.js  forms.test.js  tasks.js  tasks.test.js  validate.js
apps/rdm-extension/: README.md  manifest.json  package.json
apps/rdm-extension/scripts/: make-icons.mjs
apps/rdm-extension/src/: background.js  popup.css  popup.html  popup.js
apps/rdm-extension/src/content/: media-sniffer.js
apps/rdm-extension/src/lib/: bridge.js  cache.js  cache.test.js  config.js  intercept.js  intercept.test.js  sniffer.js  sniffer.test.js
crates/rdm-domain/: Cargo.toml
crates/rdm-domain/src/: config.rs  error.rs  lib.rs  models.rs  segments.rs  validation.rs
crates/rdm-engine/: Cargo.toml
crates/rdm-engine/src/: engine.rs  error.rs  files.rs  hls.rs  lib.rs  postprocess.rs  rate_limit.rs  sparse.rs
crates/rdm-http/: Cargo.toml
crates/rdm-http/src/: client.rs  error.rs  lib.rs  probe.rs  provider.rs
crates/rdm-resolver/: Cargo.toml
crates/rdm-resolver/src/: error.rs  instagram.rs  lib.rs  model.rs  resolver.rs  threads.rs  twitter.rs  util.rs
crates/rdm-service/: Cargo.toml
crates/rdm-service/src/: error.rs  lib.rs  manager.rs
crates/rdm-storage/: Cargo.toml
crates/rdm-storage/src/: database.rs  error.rs  lib.rs  migrations.rs
rdm/: .gitignore  PARITY.md  README.md
rdm/apps/rdm-desktop/: index.html  package-lock.json  package.json  vite.config.js
rdm/apps/rdm-desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
rdm/apps/rdm-desktop/src-tauri/src/: lib.rs  main.rs
rdm/apps/rdm-desktop/src/components/: SettingsDialog.svelte
rdm/crates/rdm-domain/: Cargo.toml
rdm/crates/rdm-domain/src/: error.rs  lib.rs  segments.rs  validation.rs
rdm/crates/rdm-engine/src/: files.rs  lib.rs  rate_limit.rs
rdm/crates/rdm-http/: Cargo.toml
rdm/crates/rdm-http/src/: client.rs  probe.rs  provider.rs
rdm/crates/rdm-service/src/: error.rs
rdm/crates/rdm-storage/: Cargo.toml
rdm/crates/rdm-storage/src/: database.rs  migrations.rs
tools/: bundle-smoke.mjs  check-version.mjs  exe-smoke.mjs  smoke-server.mjs
