[package]
name = "rdm-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDM 的领域类型:任务、分段、校验与设置。"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
directories.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
