[package]
name = "rdm-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDM 的分段下载引擎:限速、.part 文件管理与异步下载循环。"

[dependencies]
rdm-domain.workspace = true
rdm-storage.workspace = true
rdm-http.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "sync", "fs", "io-util"] }
tokio-util.workspace = true
futures-util.workspace = true
sha2.workspace = true
bytes.workspace = true
log.workspace = true
url.workspace = true
aes.workspace = true
cbc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
