[package]
name = "rdm-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDM 的 HTTP 层:共享的 reqwest 客户端、URL 探测与下载 Provider。"

[dependencies]
rdm-domain.workspace = true
reqwest.workspace = true
url.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
