[package]
name = "rdm-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDM 的媒体解析器:将社交媒体 / 帖子 URL 转换为可下载的媒体项。"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
reqwest = { workspace = true, features = ["json"] }
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
