[package]
name = "rdm-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDM 的 SQLite 持久化:任务与分段存储,以及 schema 迁移。"

[dependencies]
rdm-domain.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
