# 该 crate 自身独立成 workspace(下方为空 [workspace] 节),以使 Tauri 构建
# 与位于 ../../.. 的后端 workspace 解耦——从而那里的 `cargo test` 不必
# 引入笨重的 Tauri/WebView 工具链。
[package]
name = "rdm-desktop"
version = "0.2.0"
edition = "2021"
description = "RDM 桌面应用"

[lib]
name = "rdm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
rdm-domain = { path = "../../../crates/rdm-domain" }
rdm-storage = { path = "../../../crates/rdm-storage" }
rdm-http = { path = "../../../crates/rdm-http" }
rdm-service = { path = "../../../crates/rdm-service" }
rdm-resolver = { path = "../../../crates/rdm-resolver" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
