[package]
name = "rdm-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain types for RDM: tasks, segments, validation and settings."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
